# ComfyEngine

./: CMakeLists.txt  README.md  test_watch  test_watch.c
ce_watch/: CMakeLists.txt  Watcher.cpp  Watcher.h  main.cpp  test_target.c
include/core/: CodeInjector.h  DebugWatch.h  MemoryScanner.h  ProcessEnumerator.h  TargetProcess.h
include/gui/: AobInjectionDialog.h  AutoAssemblerDialog.h  MainWindow.h  MemoryViewerWindow.h  PointerScannerDialog.h  ProcessDialog.h  ProcessListModel.h  ValueMonitorDialog.h  WatchWindow.h
src/: CMakeLists.txt  main.cpp
src/core/: CodeInjector.cpp  DebugWatch.cpp  MemoryScanner.cpp  ProcessEnumerator.cpp  TargetProcess.cpp
src/gui/: AobInjectionDialog.cpp  AutoAssemblerDialog.cpp  MainWindow.cpp  MemoryViewerWindow.cpp  PointerScannerDialog.cpp  ProcessDialog.cpp  ProcessListModel.cpp  ValueMonitorDialog.cpp  WatchWindow.cpp
testgame/: CMakeLists.txt  main.cpp
